--- a/index.html
+++ b/index.html
@@ -14,14 +14,47 @@
     <div id="app">加载中，请稍后...</div>
     <script>
         window.$docsify = {
-            name: '',
-            repo: '',
+            name: 'chlinlearn',
+            repo: 'git@github.com:chlinlearn/nav.git',
             loadSidebar: true,
+            subMaxLevel: 2,
+            loadNavbar: true,
+            search: "auto", // default
+
+            count: {
+                countable: true,
+                fontsize: '0.9em',
+                color: 'rgb(90,90,90)',
+                language: 'chinese'
+            },
+
+            plugins: [
+                'https://github.com/docsifyjs/docsify/blob/master/docs/',
+                null,
+                function(file) {
+                    if (file.indexOf('en') === -1) {
+                        return '编辑'
+                    } else {
+                        return 'edit on git'
+                    }
+                }
+            ]
         }
     </script>
     <!-- Docsify v4 -->
     <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
     <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
+    <!-- 主题 -->
+    <!-- <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/lib/themes/dark.css"> -->
+    <!-- 搜索 -->
+    <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
+    <!-- 放大图片 -->
+    <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/zoom-image.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/docsify-copy-code"></script>
+    <!-- 翻页 -->
+    <!-- <script src="//cdn.jsdelivr.net/npm/docsify-pagination/dist/docsify-pagination.min.js"></script> -->
+    <script src="//unpkg.com/docsify-count/dist/countable.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/docsify-edit-on-github"></script>
 </body>
 
 </html>
