--- a/index.html
+++ b/index.html
@@ -29,15 +29,9 @@
             },
 
             plugins: [
-                'https://github.com/docsifyjs/docsify/blob/master/docs/',
+                'https://github.com/chlinlearn/nav/blob/master/',
                 null,
-                function(file) {
-                    if (file.indexOf('en') === -1) {
-                        return '编辑'
-                    } else {
-                        return 'edit on git'
-                    }
-                }
+                '编辑',
             ]
         }
     </script>
@@ -47,7 +41,7 @@
     <!-- 主题 -->
     <!-- <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/lib/themes/dark.css"> -->
     <!-- 搜索 -->
-    <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
+    <!-- <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script> -->
     <!-- 放大图片 -->
     <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/zoom-image.min.js"></script>
     <script src="//cdn.jsdelivr.net/npm/docsify-copy-code"></script>
