--- a/index.html
+++ b/index.html
@@ -27,12 +27,6 @@
                 color: 'rgb(90,90,90)',
                 language: 'chinese'
             },
-
-            plugins: [
-                'https://github.com/chlinlearn/nav/blob/master/',
-                null,
-                '编辑',
-            ]
         }
     </script>
     <!-- Docsify v4 -->
@@ -48,7 +42,7 @@
     <!-- 翻页 -->
     <!-- <script src="//cdn.jsdelivr.net/npm/docsify-pagination/dist/docsify-pagination.min.js"></script> -->
     <script src="//unpkg.com/docsify-count/dist/countable.js"></script>
-    <script src="//cdn.jsdelivr.net/npm/docsify-edit-on-github"></script>
+<!--     <script src="//cdn.jsdelivr.net/npm/docsify-edit-on-github"></script> -->
 </body>
 
 </html>
