--- a/index.html
+++ b/index.html
@@ -14,11 +14,16 @@
     <div id="app">加载中，请稍后...</div>
     <script>
         window.$docsify = {
+            logo: '/_media/logo.svg',
             name: 'chlinlearn',
             repo: 'git@github.com:chlinlearn/nav.git',
             loadSidebar: true,
             subMaxLevel: 2,
             loadNavbar: true,
+            mergeNavbar: true,
+            auto2top: true,
+            hideSidebar: true,
+            themeColor: '#3F51B5',
             search: "auto", // default
 
             count: {
