--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Chlinlearn Nav</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="description" content="Description">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
@@ -16,12 +16,13 @@
         window.$docsify = {
             // logo: '/_media/logo.svg',
             name: 'chlinlearn',
-            repo: 'git@github.com:chlinlearn/nav.git',
+            repo: 'https://github.com/chlinlearn/nav',
+            coverpage: false,
             loadSidebar: true,
             subMaxLevel: 2,
             loadNavbar: true,
             auto2top: true,
-            themeColor: '#3F51B5',
+            themeColor: '#8a31ff',
             search: "auto", // default
 
             count: {
