--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 </head>
 
 <body>
+    <nav>
+        <a href="#/">首页</a>
+        <a href="#/docs/zh-cn/">中文</a>
+        <a href="#/docs/en/">EN</a>
+    </nav>
     <div id="app">加载中，请稍后...</div>
     <script>
         window.$docsify = {
