--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
             auto2top: true,
             themeColor: '#8a31ff',
             search: "auto", // default
-
             count: {
                 countable: true,
                 fontsize: '0.9em',
@@ -37,14 +36,14 @@
     <!-- 主题 -->
     <!-- <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/lib/themes/dark.css"> -->
     <!-- 搜索 -->
-    <!-- <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script> -->
+    <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
     <!-- 放大图片 -->
     <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/zoom-image.min.js"></script>
     <script src="//cdn.jsdelivr.net/npm/docsify-copy-code"></script>
     <!-- 翻页 -->
     <!-- <script src="//cdn.jsdelivr.net/npm/docsify-pagination/dist/docsify-pagination.min.js"></script> -->
     <script src="//unpkg.com/docsify-count/dist/countable.js"></script>
-<!--     <script src="//cdn.jsdelivr.net/npm/docsify-edit-on-github"></script> -->
+    <!--     <script src="//cdn.jsdelivr.net/npm/docsify-edit-on-github"></script> -->
 </body>
 
 </html>
