新增谷歌分析插件

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             loadNavbar: true,
             auto2top: true,
             themeColor: '#5038db',
+            ga: 'G-6L9XK41XV1',
             search: {
                 placeholder: '🔍 搜索',
             }, // default
@@ -46,7 +47,9 @@
     <!-- <script src="//cdn.jsdelivr.net/npm/docsify-pagination/dist/docsify-pagination.min.js"></script> -->
     <script src="//unpkg.com/docsify-count/dist/countable.js"></script>
     <!--     <script src="//cdn.jsdelivr.net/npm/docsify-edit-on-github"></script> -->
-	<script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/emoji.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/emoji.min.js"></script>
+    <!-- 谷歌统计 -->
+    <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/ga.min.js"></script>
 </body>
 
 </html>
