--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <!-- 谷歌统计 -->
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-6L9XK41XV1"></script>
+    <!-- 谷歌统计 -->
     <script>
         window.dataLayer = window.dataLayer || [];
 
@@ -59,6 +60,17 @@
         gtag('js', new Date());
         gtag('config', 'G-6L9XK41XV1');
     </script>
+    <!-- 百度统计 -->
+    <script>
+        var _hmt = _hmt || [];
+        (function() {
+            var hm = document.createElement("script");
+            hm.src = "https://hm.baidu.com/hm.js?c89199b40058a26e84f84dd0f8824ed9";
+            var s = document.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(hm, s);
+        })();
+    </script>
+
 </body>
 
 </html>
