--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         window.$docsify = {
             logo: '/_media/logo.svg height=50px',
             name: 'chlinlearn',
-            repo: 'https://github.com/chlinlearn/nav',
+            // repo: 'https://github.com/chlinlearn/nav',
             loadSidebar: true,
             subMaxLevel: 2,
             loadNavbar: true,
